# GFramework

./: .gitignore  .gitmodules  CMakeLists.txt  GFramework.sln  README.md  build.bat  status.txt
.github/workflows/: cmake.yml  ubuntu_android_ndk.yml  ubuntu_gcc_cmake.yml  windows_vs_cmake.yml
Documentation/: Documentation.vcxproj  GFramework.doxygen  RunDoxygen.bat
GReflection/: CMakeLists.txt  GReflection.cpp  GReflection.h  GReflection.props  GReflection.vcxproj  GReflection.vcxproj.filters  GReflectionHelpers.h  ReadMe.txt
GScript/: CMakeLists.txt  GFrameworkLua.h  GLuaScript - Copy.cpp  GLuaScript.cpp  GLuaScript.h  GLua_data_exchange.cpp  GLua_data_exchange.h  GScript.cpp  GScript.h  GScript.props  GScript.rc  GScript.vcxproj  GScript.vcxproj.filters  resource.h  script.lua
GSerialization/: CMakeLists.txt  GSerialization.props  GSerialization.vcxproj  GSerialization.vcxproj.filters  GSerializer.cpp  GSerializer.h  GStringSerializer.cpp  GStringSerializer.h  ReadMe.txt
GVariant/: CMakeLists.txt  GObject.cpp  GObject.h  GObserver.h  GProperty.cpp  GProperty.h  GTypes.h  GVariant.cpp  GVariant.h  GVariant.props  GVariant.vcxproj  GVariant.vcxproj.filters  ReadMe.txt  property.h
IntegratedTest/: .gitignore  .qmake.stash  GFrameworkTest.pro  GFrameworkTest.pro.user.22  GFrameworkTest.pro.user.4.10-pre1  GFrameworkTest.pro.user.4.9-pre1  GFrameworkTest.sln
IntegratedTest/Editor/: Editor.pro  GFrameworkTest.vcxproj  GFrameworkTest.vcxproj.filters
IntegratedTest/Editor/src/: main.cpp  testapplication.cpp  testapplication.h  testproject.cpp  testproject.h
IntegratedTest/Engine/: Engine.pro  Engine.vcxproj  Engine.vcxproj.filters  Node.cpp  Node.h  engine.h
IntegratedTest/src/: main.cpp
Sample/: Node.cpp  Node.h  Object.cpp  Object.h  ReadMe.txt  Sample.props  Sample.vcxproj  Sample.vcxproj.filters  sphere.cpp  sphere.h  structcmd.h
Test/: CMakeLists.txt  Node.cpp  Node.h  Sphere.h  Test.props  Test.vcxproj  Test.vcxproj.filters  gproperty_test.cpp  greflection_test.cpp  gscript_test.cpp  gscript_test.h  gserialization_test.cpp  gvariant_test.cpp  main.cpp  object.h  sphere.cpp  test.txt  variant_test.cpp  variant_test.h
UnitTest/: CMakeLists.txt  Node.cpp  Node.h  Sphere.cpp  Sphere.h  benchmark_main.cpp  debugLib.lua  gproperty_benchmark.cpp  gproperty_test.cpp  gproperty_test.h  greflection_test.cpp  greflection_test.h  gscript_test.cpp  gscript_test.h  gserialization_test.cpp  gserialization_test.h  gvariant_test.cpp  gvariant_test.h  main.cpp  script.lua  sphere.cpp  test_main.cpp
UnitTest/Coverage/: Windows_v140_Debug_Coverage.xml  Windows_v140_RelWithDebInfo_Coverage.xml  Windows_v140_Release_Coverage.xml  Windows_v141_Debug_Coverage.xml  Windows_v141_RelWithDebInfo_Coverage.xml  Windows_v141_Release_Coverage.xml
UnitTest/Reports/: Ubuntu_gcc_Debug_Report.xml  Ubuntu_gcc_RelWithDebInfo_Report.xml  Ubuntu_gcc_Release_Report.xml  Windows_VS2015_Debug_Report.xml  Windows_VS2015_Release_Report.xml  Windows_v140_Debug_Report.xml  Windows_v140_RelWithDebInfo_Report.xml  Windows_v140_Release_Report.xml  Windows_v141_Debug_Report.xml  Windows_v141_RelWithDebInfo_Report.xml  Windows_v141_Release_Report.xml
cmake/: toolchain_Windows_64_Cygwin.cmake  toolchain_android_arm.cmake  toolchain_linux_x86_64_gcc.cmake  toolchain_utilities.cmake
